--- a/css/lightbox.css
+++ b/css/lightbox.css
@@ -1,6 +1,6 @@
 /* Preload images */
 body:after {
-  content: url(../assets/close.png) url(../assets/loading.gif) url(../assets/prev.png) url(../assets/next.png);
+  content: url(/assets/close.png) url(/assets/loading.gif) url(/assets/prev.png) url(/assets/next.png);
   display: none;
 }
 
