--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,7 +14,7 @@
 
         <ul class="main-menu">
           <li>
-            {% if page.url == "/" %}<span class="current-menu-item">WRITING</span>
+            {% if page.url == "/index.html" %}<span class="current-menu-item">WRITING</span>
             {% else %}<a href="/">WRITING</a>
             {% endif %}
           </li>
@@ -36,8 +36,6 @@
     </div>
 
     {% include footer.html %}
-
-    {{ page.url }}
 
   </body>
 
