Debugging writings link.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,7 +34,7 @@
         {{ content }}
       </div>
     </div>
-    {% page.url %}
+    {{ page.url }}
     {% include footer.html %}
 
   </body>
