--- a/_layouts/math.html
+++ b/_layouts/math.html
@@ -49,6 +49,9 @@
             <a href="cv.pdf">CV</a>
           </li>
           <li>
+            <a href="research_statement.pdf">RESEARCH STATEMENT</a>
+          </li>
+          <li>
             {% if page.url == "/math/contact.html" %}<span class="current-menu-item">CONTACT</span>
             {% else %}<a href="contact.html">CONTACT</a>
             {% endif %}
