Updating blog posts.

--- a/_sass/_style.scss
+++ b/_sass/_style.scss
@@ -30,6 +30,12 @@
     margin-right: auto;
 }
 
+.post-img-multi {
+    margin-left: .5em;
+    margin-right: .5em;
+    text-align: center;
+}
+
 .post-img-caption {
     text-align: center;
     font-weight: 600;
