--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -242,4 +242,13 @@
 }
 
 
+/**
+ * About page
+ */
+
+.col-wrapper{width:900px; margin:0 auto; display:flex; flex-direction: row;}
+// .col{margin:0 10px; float:left; display:inline;}
+.col-body{width:660px;}
+.col-image{width:175px; margin-top:5px;}
+.mypic{border-radius:1000px;}
 
