Updating for mobile.

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -246,8 +246,8 @@
  * About page
  */
 
-.col-wrapper{width:900px; margin:0 auto; display:flex; flex-direction: row;}
-// .col{margin:0 10px; float:left; display:inline;}
+.col-wrapper{width:900px; margin:0 auto;} // display:flex; flex-direction: row;}
+.col{margin:0 10px; float:left; display:inline-block;}
 .col-body{width:660px;}
 .col-image{width:175px; margin-top:5px;}
 .mypic{border-radius:1000px;}
