Updating math website.

--- a/_layouts/math.html
+++ b/_layouts/math.html
@@ -49,7 +49,10 @@
             <a href="cv.pdf">CV</a>
           </li>
           <li>
-            <a href="research_statement.pdf">RESEARCH STATEMENT</a>
+            <a href="http://arxiv.org/find/math/1/au:+Levanger_R/0/1/0/all/0/1">ARXIV</a>
+          </li>
+          <li>
+            <a href="https://github.com/rachellevanger">GITHUB</a>
           </li>
           <li>
             {% if page.url == "/math/contact.html" %}<span class="current-menu-item">CONTACT</span>
