--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -51,7 +51,12 @@ img {
     vertical-align: middle;
 }
 
-
+.math-thumb {
+    float: left;
+    width: 200px;
+    margin-right: 1em;
+    margin-bottom: 1em;
+}
 
 /**
  * Figures
