Updating preprint link.

--- a/_layouts/math.html
+++ b/_layouts/math.html
@@ -49,7 +49,7 @@
             <a href="cv.pdf">CV</a>
           </li>
           <li>
-            <a href="http://arxiv.org/find/math/1/au:+Levanger_R/0/1/0/all/0/1">ARXIV</a>
+            <a href="https://arxiv.org/search/?query=Levanger&searchtype=author&order=-announced_date_first&size=50">ARXIV</a>
           </li>
           <li>
             <a href="https://github.com/rachellevanger">GITHUB</a>
